chapter5/kubia-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual-with-portnames

spec:
  containers:
    - image: luksa/kubia
      name: kubia
      ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
