chapter5/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
  namespace: grafana
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32214
  selector:
    app: kubia
